Solucion de contactos

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -31,7 +31,7 @@
         <h2>¡Te estamos buscando!</h2>
         <img src="../images/we-want-you.jpg" alt="michi" class="michi">
         <p class="description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Asperiores animi eos molestiae magnam eius accusantium mollitia. Ipsa eligendi esse magnam itaque placeat voluptatem doloribus accusantium qui unde! Delectus, dolorum quia?</p>
-        <form action="#" method="post">
+        <form action="#" method="get">
             <label for="nombre">Nombre:</label><br>
             <input type="text" id="nombre" name="nombre" required><br><br>
           
