Correcciones generales de la entrega, audio e img

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </nav>
         <hr>
         <h2>Bienvenido terricola</h2>
-        <image src="./images/michis-index.jpg" alt="michi" class="michi">
+        <img src="./images/michis-index.jpg" alt="michi" class="michi">
         <p class="description">No sos un visitante cualquiera: has ingresado al cuartel central de la élite intergaláctica más valerosa y adorable del universo conocido.
         Somos héroes cósmicos, forjados en las nebulosas del deber, entrenados en los anillos de Saturno y consagrados por la mismísima Constelación del Miau Supremo. Nos dedicamos a una misión sagrada: rescatar, proteger y venerar a los gatitos más asombrosos, legendarios y esponjosamente poderosos del hiperespacio.
         Desde las profundidades de agujeros negros hasta las terrazas de Marte, ningún michi queda atrás. Cada uno de ellos es un tesoro estelar, una criatura mística envuelta en ronroneos capaces de alterar la realidad.    
@@ -39,7 +39,9 @@
         <footer>
             <p class="footer">&copy; 2025 Guardianes de los Michis. Todos los derechos reservados<a href="./pages/surprise.html" class="sorpresa">.</a></p> <!-- solo se encuentra en el index -->
             <p class="footer">Desarrollado por Vargh</p>
-            <audio controls loop><source src="./sounds/ss13-title.ogg"</audio> <!-- Despues le pongo la musiquita mas copada con js -->
+            <audio controls loop>
+                <source src="../sounds/ss13-title.ogg" type="audio/ogg">
+            </audio> <!-- Despues le pongo la musiquita mas copada con js -->
         </footer>
 </body>
 
