--- a/pages/michi-lista.html
+++ b/pages/michi-lista.html
@@ -36,7 +36,9 @@
         <footer>
             <p class="footer">&copy; 2025 Guardianes de los Michis. Todos los derechos reservados.</p>
             <p class="footer">Desarrollado por Vargh</p>
-            <audio controls loop><source src="../sounds/ss13-title.ogg"</audio> <!-- Despues le pongo la musiquita mas copada con js -->
+            <audio controls loop>
+                <source src="../sounds/ss13-title.ogg" type="audio/ogg">
+            </audio> <!-- Despues le pongo la musiquita mas copada con js -->
         </footer>
 </body>
 
