--- a/pages/michi-lista.html
+++ b/pages/michi-lista.html
@@ -29,9 +29,18 @@
         </nav>
         <hr>
         <h2>Guardianes rescatados</h2>
-        <img src="../images/usi-michi.jpg" alt="michi" class="michi-lista">
-        <h3>Usi, Marine espacial del escuadron HK-47</h3>
-        <p class="description-michi">Rescatado del cinturon de Jupiter durante la decimo octava noche de la guerra intergaláctica que azota las planicies de Xin'alor. Es un ser amigable, con un hambre voraz, disfruta de pasar sus tardes tomando sol, molestando a sus compañeros y masticando cables gracias a sus poderes para detectar que cables no funcionan como deben</p>
+        <div class="michi-tarjeta-container">
+            <div class="michi-tarjeta"><img src="../images/usi-michi.jpg" alt="michi" class="michi-lista">
+            <h3>Usi, Marine espacial del escuadron HK-47</h3>
+            <p class="description-michi">Rescatado del cinturon de Jupiter durante la decimo octava noche de la guerra intergaláctica que azota las planicies de Xin'alor. Es un ser amigable, con un hambre voraz, disfruta de pasar sus tardes tomando sol, molestando a sus compañeros y masticando cables gracias a sus poderes para detectar que cables no funcionan como deben</p></div>
+            <div class="michi-tarjeta"><img src="../images/usi-michi.jpg" alt="michi" class="michi-lista">
+            <h3>Usi, Marine espacial del escuadron HK-47</h3>
+            <p class="description-michi">Rescatado del cinturon de Jupiter durante la decimo octava noche de la guerra intergaláctica que azota las planicies de Xin'alor. Es un ser amigable, con un hambre voraz, disfruta de pasar sus tardes tomando sol, molestando a sus compañeros y masticando cables gracias a sus poderes para detectar que cables no funcionan como deben</p></div>
+            <div class="michi-tarjeta"><img src="../images/usi-michi.jpg" alt="michi" class="michi-lista">
+            <h3>Usi, Marine espacial del escuadron HK-47</h3>
+            <p class="description-michi">Rescatado del cinturon de Jupiter durante la decimo octava noche de la guerra intergaláctica que azota las planicies de Xin'alor. Es un ser amigable, con un hambre voraz, disfruta de pasar sus tardes tomando sol, molestando a sus compañeros y masticando cables gracias a sus poderes para detectar que cables no funcionan como deben</p></div>
+        </div>
+        </body>
         <hr>
         <footer>
             <p class="footer">&copy; 2025 Guardianes de los Michis. Todos los derechos reservados.</p>
@@ -40,6 +49,4 @@
                 <source src="../sounds/ss13-title.ogg" type="audio/ogg">
             </audio> <!-- Despues le pongo la musiquita mas copada con js -->
         </footer>
-</body>
-
 </html>
