--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <p class="footer">&copy; 2025 Guardianes de los Michis. Todos los derechos reservados<a href="./pages/surprise.html" class="sorpresa">.</a></p> <!-- solo se encuentra en el index -->
             <p class="footer">Desarrollado por Vargh</p>
             <audio controls loop>
-                <source src="../sounds/ss13-title.ogg" type="audio/ogg">
+                <source src="./sounds/ss13-title.ogg" type="audio/ogg">
             </audio> <!-- Despues le pongo la musiquita mas copada con js -->
         </footer>
 </html>
