Estructura tarjetas, color de fondo

--- a/pages/michi-lista.html
+++ b/pages/michi-lista.html
@@ -32,13 +32,26 @@
         <div class="michi-tarjeta-container">
             <div class="michi-tarjeta"><img src="../images/usi-michi.jpg" alt="michi" class="michi-lista">
             <h3>Usi, Marine espacial del escuadron HK-47</h3>
-            <p class="description-michi">Rescatado del cinturon de Jupiter durante la decimo octava noche de la guerra intergaláctica que azota las planicies de Xin'alor. Es un ser amigable, con un hambre voraz, disfruta de pasar sus tardes tomando sol, molestando a sus compañeros y masticando cables gracias a sus poderes para detectar que cables no funcionan como deben</p></div>
+            <ul class="michi-datos"> 
+                <li><span class="michi-description">Edad: </span><span class="michi-description2">6 meses terricolas.</span></li>
+                <li><span class="michi-description">Raza: </span><span class="michi-description2"> Michi espacial.</span></li>
+                <li><span class="michi-description">Color: </span><span class="michi-description2">Atigrado Estelar</span></li>
+                <li><span class="michi-description">Historia: </span><span class ="michi-description2">Rescatado del cinturon de Jupiter, Usi formaba parte de un escuadron especial dedicado a la caceria de cables electricos que presentaban desperfectos tecnicos.</span></li></div>
             <div class="michi-tarjeta"><img src="../images/usi-michi.jpg" alt="michi" class="michi-lista">
             <h3>Usi, Marine espacial del escuadron HK-47</h3>
-            <p class="description-michi">Rescatado del cinturon de Jupiter durante la decimo octava noche de la guerra intergaláctica que azota las planicies de Xin'alor. Es un ser amigable, con un hambre voraz, disfruta de pasar sus tardes tomando sol, molestando a sus compañeros y masticando cables gracias a sus poderes para detectar que cables no funcionan como deben</p></div>
+            <ul class="michi-datos"> 
+                <li><span class="michi-description">Edad: </span><span class="michi-description2">6 meses terricolas.</span></li>
+                <li><span class="michi-description">Raza: </span><span class="michi-description2"> Michi espacial.</span></li>
+                <li><span class="michi-description">Color: </span><span class="michi-description2">Atigrado Estelar</span></li>
+                <li><span class="michi-description">Historia: </span><span class ="michi-description2">Rescatado del cinturon de Jupiter, Usi formaba parte de un escuadron especial dedicado a la caceria de cables electricos que presentaban desperfectos tecnicos.</span></li>
+                </div>
             <div class="michi-tarjeta"><img src="../images/usi-michi.jpg" alt="michi" class="michi-lista">
             <h3>Usi, Marine espacial del escuadron HK-47</h3>
-            <p class="description-michi">Rescatado del cinturon de Jupiter durante la decimo octava noche de la guerra intergaláctica que azota las planicies de Xin'alor. Es un ser amigable, con un hambre voraz, disfruta de pasar sus tardes tomando sol, molestando a sus compañeros y masticando cables gracias a sus poderes para detectar que cables no funcionan como deben</p></div>
+            <ul class="michi-datos"> 
+                <li><span class="michi-description">Edad: </span><span class="michi-description2">6 meses terricolas.</span></li>
+                <li><span class="michi-description">Raza: </span><span class="michi-description2"> Michi espacial.</span></li>
+                <li><span class="michi-description">Color: </span><span class="michi-description2">Atigrado Estelar</span></li>
+                <li><span class="michi-description">Historia: </span><span class ="michi-description2">Rescatado del cinturon de Jupiter, Usi formaba parte de un escuadron especial dedicado a la caceria de cables electricos que presentaban desperfectos tecnicos.</span></li></div>
         </div>
         </body>
         <hr>
