--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style/style.css">
+    <link rel="icon" type="image/png" href="./images/favicon.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Electrolize&display=swap" rel="stylesheet">
@@ -17,17 +18,18 @@
 <body>
     <header>
         <img src="./images/logo.png" alt="logo de los michis" class="logo">
-        </header> 
         <h1>Estación de navegación</h1>
         <nav>
             <ul class="nav-list">
-                <li><a href="index.html">Inicio</a></li>
-                <li><a href="./pages/about.html">Sobre nosotros</a></li>
-                <li><a href="./pages/michi-lista.html">Nuestros Michis</a></li>
-                <li><a href="./pages/contact.html">Te estamos buscando</a></li>
+                <li><a href="index.html"><button type="button" class="btn btn-outline-light btn-lg">Inicio</button></a></li>
+                <li><a href="./pages/about.html"><button type="button" class="btn btn-outline-light btn-lg">Sobre Nosotros</button></a></li>
+                <li><a href="./pages/michi-lista.html"><button type="button" class="btn btn-outline-light btn-lg">Nuestros Michis</button></a></li>
+                <li><a href="./pages/contact.html"><button type="button" class="btn btn-outline-light btn-lg">Contacto</button></a></li>
             </ul>
         </nav>
-        <hr>
+        </header>
+        <main> 
+        <div class="divider"></div>
         <h2>Bienvenido terricola</h2>
         <img src="./images/michis-index.jpg" alt="imagen bienvenida" class="michi">
         <p class="description">No sos un visitante cualquiera: has ingresado al cuartel central de la élite intergaláctica más valerosa y adorable del universo conocido.
@@ -35,8 +37,8 @@
         Desde las profundidades de agujeros negros hasta las terrazas de Marte, ningún michi queda atrás. Cada uno de ellos es un tesoro estelar, una criatura mística envuelta en ronroneos capaces de alterar la realidad.    
         Aquí, en este santuario digital, vas a conocer a las mascotas más magníficas jamás documentadas por la Federación Interplanetaria de Felinos. ¡Estás a punto de embarcarte en una odisea de pelaje, valentía y ternura cósmica!
         ¡Preparate guardián! El destino de los michis del universo está en tus manos.</p>
-        </body>
-        <hr>
+        <div class="divider"></div>
+        </main>
         <footer>
             <p class="footer">&copy; 2025 Guardianes de los Michis. Todos los derechos reservados<a href="./pages/surprise.html" class="sorpresa">.</a></p> <!-- solo se encuentra en el index -->
             <p class="footer">Desarrollado por Vargh</p>
@@ -44,4 +46,7 @@
                 <source src="./sounds/ss13-title.ogg" type="audio/ogg">
             </audio> <!-- Despues le pongo la musiquita mas copada con js -->
         </footer>
+    </body>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
 </html>
