--- a/index.html
+++ b/index.html
@@ -16,9 +16,41 @@
 
 <!--Cuerpo de la pagina web-->
 <body>
+    <div class="starry-bg">
+      <div class="star star1"></div>
+      <div class="star star2"></div>
+      <div class="star star3"></div>
+      <div class="star star4"></div>
+      <div class="star star5"></div>
+      <div class="star star6"></div>
+      <div class="star star7"></div>
+      <div class="star star8"></div>
+      <div class="star star9"></div>
+      <div class="star star10"></div>
+      <div class="star star11"></div>
+      <div class="star star12"></div>
+      <div class="star star13"></div>
+      <div class="star star14"></div>
+      <div class="star star15"></div>
+      <div class="star star16"></div>
+      <div class="star star17"></div>
+      <div class="star star18"></div>
+      <div class="star star19"></div>
+      <div class="star star20"></div>
+      <div class="star star21"></div>
+      <div class="star star22"></div>
+      <div class="star star23"></div>
+      <div class="star star24"></div>
+      <div class="star star25"></div>
+      <div class="star star26"></div>
+      <div class="star star27"></div>
+      <div class="star star28"></div>
+      <div class="star star29"></div>
+      <div class="star star30"></div>
+    </div>
     <header>
         <img src="./images/logo.png" alt="logo de los michis" class="logo">
-        <h1>Estación de navegación</h1>
+        <h1>Guardianes de los Michis: Estacion de navegacion</h1>
         <nav>
             <ul class="nav-list">
                 <li><a href="index.html"><button type="button" class="btn btn-outline-light btn-lg">Inicio</button></a></li>
