--- a/pages/surprise.html
+++ b/pages/surprise.html
@@ -6,6 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../style/style.css">
+    <link rel="icon" type="image/png" href="../images/favicon.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Electrolize&display=swap" rel="stylesheet">
@@ -15,25 +16,59 @@
 
 <!--Cuerpo de la pagina web-->
 <body>
+    <div class="starry-bg">
+      <div class="star star1"></div>
+      <div class="star star2"></div>
+      <div class="star star3"></div>
+      <div class="star star4"></div>
+      <div class="star star5"></div>
+      <div class="star star6"></div>
+      <div class="star star7"></div>
+      <div class="star star8"></div>
+      <div class="star star9"></div>
+      <div class="star star10"></div>
+      <div class="star star11"></div>
+      <div class="star star12"></div>
+      <div class="star star13"></div>
+      <div class="star star14"></div>
+      <div class="star star15"></div>
+      <div class="star star16"></div>
+      <div class="star star17"></div>
+      <div class="star star18"></div>
+      <div class="star star19"></div>
+      <div class="star star20"></div>
+      <div class="star star21"></div>
+      <div class="star star22"></div>
+      <div class="star star23"></div>
+      <div class="star star24"></div>
+      <div class="star star25"></div>
+      <div class="star star26"></div>
+      <div class="star star27"></div>
+      <div class="star star28"></div>
+      <div class="star star29"></div>
+      <div class="star star30"></div>
+    </div>
     <header>
         <img src="../images/logo.png" alt="logo de los michis" class="logo">
-        </header> 
         <h1>Estación de navegación</h1>
         <nav>
             <ul class="nav-list">
-                <li><a href="../index.html">Inicio</a></li>
-                <li><a href="about.html">Sobre nosotros</a></li>
-                <li><a href="michi-lista.html">Nuestros Michis</a></li>
-                <li><a href="contact.html">Te estamos buscando</a></li>
+                <li><a href="../index.html"><button type="button" class="btn btn-outline-light btn-lg">Inicio</button></a></li>
+                <li><a href="about.html"><button type="button" class="btn btn-outline-light btn-lg">Sobre nosotros</button></a></li>
+                <li><a href="michi-lista.html"><button type="button" class="btn btn-outline-light btn-lg">Nuestros Michis</button></a></li>
+                <li><a href="contact.html"><button type="button" class="btn btn-outline-light btn-lg">Te estamos buscando</button></a></li>
             </ul>
         </nav>
-        <hr>
+    </header>
+        <main>
+        <div class="divider"></div>
         <div class="video-container">
             <video width="560" height="315" autoplay muted loop controls>
                 <source src="https://cdn.mtdv.me/video/rick.mp4" type="video/mp4">
               </video>
           </div>
-        <hr>
+        <div class="divider"></div>
+        </main>
         <footer>
             <p class="footer">&copy; 2025 Guardianes de los Michis. Todos los derechos reservados.</p>
             <p class="footer">Desarrollado por Vargh</p>
@@ -42,5 +77,6 @@
             </audio> <!-- Despues le pongo la musiquita mas copada con js -->
         </footer>
 </body>
-
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
 </html>
