--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style/style.css">
-    <link rel="icon" type="image/png" href="./images/favicon.png">
+    <link rel="stylesheet" href="../style/style.css">
+    <link rel="icon" type="image/png" href="../images/favicon.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Electrolize&display=swap" rel="stylesheet">
@@ -15,70 +15,96 @@
 </head>
 
 <!--Cuerpo de la pagina web-->
+
 <body>
     <div class="starry-bg">
-      <div class="star star1"></div>
-      <div class="star star2"></div>
-      <div class="star star3"></div>
-      <div class="star star4"></div>
-      <div class="star star5"></div>
-      <div class="star star6"></div>
-      <div class="star star7"></div>
-      <div class="star star8"></div>
-      <div class="star star9"></div>
-      <div class="star star10"></div>
-      <div class="star star11"></div>
-      <div class="star star12"></div>
-      <div class="star star13"></div>
-      <div class="star star14"></div>
-      <div class="star star15"></div>
-      <div class="star star16"></div>
-      <div class="star star17"></div>
-      <div class="star star18"></div>
-      <div class="star star19"></div>
-      <div class="star star20"></div>
-      <div class="star star21"></div>
-      <div class="star star22"></div>
-      <div class="star star23"></div>
-      <div class="star star24"></div>
-      <div class="star star25"></div>
-      <div class="star star26"></div>
-      <div class="star star27"></div>
-      <div class="star star28"></div>
-      <div class="star star29"></div>
-      <div class="star star30"></div>
+        <div class="star star1"></div>
+        <div class="star star2"></div>
+        <div class="star star3"></div>
+        <div class="star star4"></div>
+        <div class="star star5"></div>
+        <div class="star star6"></div>
+        <div class="star star7"></div>
+        <div class="star star8"></div>
+        <div class="star star9"></div>
+        <div class="star star10"></div>
+        <div class="star star11"></div>
+        <div class="star star12"></div>
+        <div class="star star13"></div>
+        <div class="star star14"></div>
+        <div class="star star15"></div>
+        <div class="star star16"></div>
+        <div class="star star17"></div>
+        <div class="star star18"></div>
+        <div class="star star19"></div>
+        <div class="star star20"></div>
+        <div class="star star21"></div>
+        <div class="star star22"></div>
+        <div class="star star23"></div>
+        <div class="star star24"></div>
+        <div class="star star25"></div>
+        <div class="star star26"></div>
+        <div class="star star27"></div>
+        <div class="star star28"></div>
+        <div class="star star29"></div>
+        <div class="star star30"></div>
     </div>
     <header>
-        <img src="./images/logo.png" alt="logo de los michis" class="logo">
+        <img src="./images/logo.png" alt="logo de los michis" class="logo" />
         <h1>Guardianes de los Michis: Estacion de navegacion</h1>
         <nav>
             <ul class="nav-list">
-                <li><a href="index.html"><button type="button" class="btn btn-outline-light btn-lg">Inicio</button></a></li>
-                <li><a href="./pages/about.html"><button type="button" class="btn btn-outline-light btn-lg">Sobre Nosotros</button></a></li>
-                <li><a href="./pages/michi-lista.html"><button type="button" class="btn btn-outline-light btn-lg">Nuestros Michis</button></a></li>
-                <li><a href="./pages/contact.html"><button type="button" class="btn btn-outline-light btn-lg">Contacto</button></a></li>
+                <li>
+                    <a href="index.html"><button type="button" class="btn btn-outline-light btn-lg">
+                            Inicio
+                        </button></a>
+                </li>
+                <li>
+                    <a href="./pages/about.html"><button type="button" class="btn btn-outline-light btn-lg">
+                            Sobre Nosotros
+                        </button></a>
+                </li>
+                <li>
+                    <a href="./pages/michi-lista.html"><button type="button" class="btn btn-outline-light btn-lg">
+                            Nuestros Michis
+                        </button></a>
+                </li>
+                <li>
+                    <a href="./pages/contact.html"><button type="button" class="btn btn-outline-light btn-lg">
+                            Contacto
+                        </button></a>
+                </li>
             </ul>
         </nav>
-        </header>
-        <main> 
+    </header>
+    <main>
         <div class="divider"></div>
         <h2>Bienvenido terricola</h2>
-        <img src="./images/michis-index.jpg" alt="imagen bienvenida" class="michi">
-        <p class="description">No sos un visitante cualquiera: has ingresado al cuartel central de la élite intergaláctica más valerosa y adorable del universo conocido.
-        Somos héroes cósmicos, forjados en las nebulosas del deber, entrenados en los anillos de Saturno y consagrados por la mismísima Constelación del Miau Supremo. Nos dedicamos a una misión sagrada: rescatar, proteger y venerar a los gatitos más asombrosos, legendarios y esponjosamente poderosos del hiperespacio.
-        Desde las profundidades de agujeros negros hasta las terrazas de Marte, ningún michi queda atrás. Cada uno de ellos es un tesoro estelar, una criatura mística envuelta en ronroneos capaces de alterar la realidad.    
-        Aquí, en este santuario digital, vas a conocer a las mascotas más magníficas jamás documentadas por la Federación Interplanetaria de Felinos. ¡Estás a punto de embarcarte en una odisea de pelaje, valentía y ternura cósmica!
-        ¡Preparate guardián! El destino de los michis del universo está en tus manos.</p>
+        <img src="./images/michis-index.jpg" alt="imagen bienvenida" class="img-fluid d-block mx-auto" />
+        <p class="description">
+            Usted se encuentra actualmente en el centro de operaciones de la
+            estacion espacial numero 57, bajo el comando de proteccion animal numero
+            uno de la galaxia, mas conocido como "Guardianes de los michis".
+        </p>
         <div class="divider"></div>
-        </main>
-        <footer>
-            <p class="footer">&copy; 2025 Guardianes de los Michis. Todos los derechos reservados<a href="./pages/surprise.html" class="sorpresa">.</a></p> <!-- solo se encuentra en el index -->
-            <p class="footer">Desarrollado por Vargh</p>
+    </main>
+    <footer>
+        <p class="footer">
+            &copy; 2025 Guardianes de los Michis. Todos los derechos reservados<a href="./pages/surprise.html"
+                class="sorpresa">.</a>
+        </p>
+        <p class="footer">Desarrollado por Vargh</p>
+        <div class="audio-fixed">
             <audio controls loop>
-                <source src="./sounds/ss13-title.ogg" type="audio/ogg">
-            </audio> <!-- Despues le pongo la musiquita mas copada con js -->
-        </footer>
-    </body>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
+                <source src="./sounds/ss13-title.ogg" type="audio/ogg" />
+            </audio>
+        </div>
+    </footer>
+</body>
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous" />
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous">
+</script>
+
 </html>
