--- a/pages/michi-lista.html
+++ b/pages/michi-lista.html
@@ -15,65 +15,107 @@
 </head>
 
 <!--Cuerpo de la pagina web-->
+
 <body>
     <div class="starry-bg">
-      <div class="star star1"></div>
-      <div class="star star2"></div>
-      <div class="star star3"></div>
-      <div class="star star4"></div>
-      <div class="star star5"></div>
-      <div class="star star6"></div>
-      <div class="star star7"></div>
-      <div class="star star8"></div>
-      <div class="star star9"></div>
-      <div class="star star10"></div>
-      <div class="star star11"></div>
-      <div class="star star12"></div>
-      <div class="star star13"></div>
-      <div class="star star14"></div>
-      <div class="star star15"></div>
-      <div class="star star16"></div>
-      <div class="star star17"></div>
-      <div class="star star18"></div>
-      <div class="star star19"></div>
-      <div class="star star20"></div>
-      <div class="star star21"></div>
-      <div class="star star22"></div>
-      <div class="star star23"></div>
-      <div class="star star24"></div>
-      <div class="star star25"></div>
-      <div class="star star26"></div>
-      <div class="star star27"></div>
-      <div class="star star28"></div>
-      <div class="star star29"></div>
-      <div class="star star30"></div>
+        <div class="star star1"></div>
+        <div class="star star2"></div>
+        <div class="star star3"></div>
+        <div class="star star4"></div>
+        <div class="star star5"></div>
+        <div class="star star6"></div>
+        <div class="star star7"></div>
+        <div class="star star8"></div>
+        <div class="star star9"></div>
+        <div class="star star10"></div>
+        <div class="star star11"></div>
+        <div class="star star12"></div>
+        <div class="star star13"></div>
+        <div class="star star14"></div>
+        <div class="star star15"></div>
+        <div class="star star16"></div>
+        <div class="star star17"></div>
+        <div class="star star18"></div>
+        <div class="star star19"></div>
+        <div class="star star20"></div>
+        <div class="star star21"></div>
+        <div class="star star22"></div>
+        <div class="star star23"></div>
+        <div class="star star24"></div>
+        <div class="star star25"></div>
+        <div class="star star26"></div>
+        <div class="star star27"></div>
+        <div class="star star28"></div>
+        <div class="star star29"></div>
+        <div class="star star30"></div>
     </div>
     <header>
         <img src="../images/logo.png" alt="logo de los michis" class="logo">
-        <h1>Estación de navegación</h1>
+        <h1>Guardianes de los Michis: Estacion de navegacion</h1>
         <nav>
             <ul class="nav-list">
-                <li><a href="../index.html"><button type="button" class="btn btn-outline-light btn-lg">Inicio</button></a></li>
-                <li><a href="about.html"><button type="button" class="btn btn-outline-light btn-lg">Sobre nosotros</button></a></li>
-                <li><a href="michi-lista.html"><button type="button" class="btn btn-outline-light btn-lg">Nuestros Michis</button></a></li>
-                <li><a href="contact.html"><button type="button" class="btn btn-outline-light btn-lg">Te estamos buscando</button></a></li>
+                <li><a href="../index.html"><button type="button"
+                            class="btn btn-outline-light btn-lg">Inicio</button></a></li>
+                <li><a href="about.html"><button type="button" class="btn btn-outline-light btn-lg">Sobre
+                            nosotros</button></a></li>
+                <li><a href="michi-lista.html"><button type="button" class="btn btn-outline-light btn-lg">Nuestros
+                            Michis</button></a></li>
+                <li><a href="contact.html"><button type="button"
+                            class="btn btn-outline-light btn-lg">Contacto</button></a></li>
             </ul>
         </nav>
         <main>
-        <div class="divider"></div>
-        <h2>Nuestros Michis</h2>
-        <img src="../images/we-want-you.jpg" alt="michi" class="michi">
-        <p class="description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Asperiores animi eos molestiae magnam eius accusantium mollitia. Ipsa eligendi esse magnam itaque placeat voluptatem doloribus accusantium qui unde! Delectus, dolorum quia?</p>
-          <div class="divider"></div>
+            <div class="divider"></div>
+            <h2>Nuestros Michis</h2>
+            <div class="michi-tarjetas">
+                <div class="card" style="width: 23rem;">
+                    <img src="../images/usi-michi.jpg" class="card-img-top" alt="Usi, michi intergalactico">
+                    <div class="card-body">
+                        <h5 class="card-title">Usi, el azote de xun'tar</h5>
+                        <p class="card-text">Gran guerrero de la galaxia, Usi es un michi que ha viajado por todo el
+                            universo. Conoce los secretos de los planetas y es un experto en derrotar a los enemigos de
+                            la humanidad.</p>
+                        <ul class="list-group list-group-flush">
+                            <li class="list-group-item"><span class="badge text-bg-primary">Edad</span> 5 meses
+                                terricolas</li>
+                            <li class="list-group-item"><span class="badge text-bg-primary">Sexo</span> Masculino</li>
+                            <li class="list-group-item"><span class="badge text-bg-primary">Comportamiento</span>
+                                Amigable</li>
+                        </ul>
+                        <a href="#" class="btn btn-primary">¡Adoptar!</a>
+                    </div>
+                </div>
+                <div class="card" style="width: 23rem;">
+                    <img src="../images/usi-michi.jpg" class="card-img-top" alt="Usi, michi intergalactico">
+                    <div class="card-body">
+                        <h5 class="card-title">Usi, el azote de xun'tar</h5>
+                        <p class="card-text"><span class="badge text-bg-primary">Edad</span> 5 meses terricolas</p>
+                        <p class="card-text"><span class="badge text-bg-primary">Sexo</span> Macho</p>
+                        <p class="card-text"><span class="badge text-bg-primary">Comportamiento</span> Soldado
+                            solitario, ama los humanos</p>
+                        <p class="card-text"><span class="badge text-bg-primary">Poder</span> Puede devorar un plato de
+                            comida en 10 segundos</p>
+                        <a href="#" class="btn btn-primary">¡Adoptar!</a>
+                    </div>
+                </div>
+            </div>
+            <div class="divider"></div>
         </main>
-          <footer>
-              <p class="footer">&copy; 2025 Guardianes de los Michis. Todos los derechos reservados.</p>
-              <p class="footer">Desarrollado por Vargh</p>
-              <audio controls loop>
-                  <source src="../sounds/ss13-title.ogg" type="audio/ogg">
-                </audio> <!-- Despues le pongo la musiquita mas copada con js -->
-            </footer>
-        </body>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
+        <footer>
+            <p class="footer">&copy; 2025 Guardianes de los Michis. Todos los derechos reservados<a
+                    href="./pages/surprise.html" class="sorpresa">.</a></p>
+            <p class="footer">Desarrollado por Vargh</p>
+            <div class="audio-fixed">
+                <audio controls loop>
+                    <source src="../sounds/ss13-title.ogg" type="audio/ogg">
+                </audio>
+            </div>
+        </footer>
+</body>
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous">
+</script>
+
 </html>
