--- a/pages/surprise.html
+++ b/pages/surprise.html
@@ -1,21 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-<!--surprise de Guardianes de los Michis-->
+  <!--surprise de Guardianes de los Michis-->
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../style/style.css">
-    <link rel="icon" type="image/png" href="../images/favicon.png">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Electrolize&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Electrolize&family=Geo:ital@0;1&display=swap" rel="stylesheet">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../style/style.css" />
+    <link rel="icon" type="image/png" href="../images/favicon.png" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Electrolize&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Electrolize&family=Geo:ital@0;1&display=swap"
+      rel="stylesheet"
+    />
     <title>Guardianes de los Michis</title>
-</head>
+  </head>
 
-<!--Cuerpo de la pagina web-->
-<body>
+  <!--Cuerpo de la pagina web-->
+  <body>
     <div class="starry-bg">
       <div class="star star1"></div>
       <div class="star star2"></div>
@@ -49,34 +55,75 @@
       <div class="star star30"></div>
     </div>
     <header>
-        <img src="../images/logo.png" alt="logo de los michis" class="logo">
-        <h1>Estación de navegación</h1>
-        <nav>
-            <ul class="nav-list">
-                <li><a href="../index.html"><button type="button" class="btn btn-outline-light btn-lg">Inicio</button></a></li>
-                <li><a href="about.html"><button type="button" class="btn btn-outline-light btn-lg">Sobre nosotros</button></a></li>
-                <li><a href="michi-lista.html"><button type="button" class="btn btn-outline-light btn-lg">Nuestros Michis</button></a></li>
-                <li><a href="contact.html"><button type="button" class="btn btn-outline-light btn-lg">Te estamos buscando</button></a></li>
-            </ul>
-        </nav>
+      <img src="../images/logo.png" alt="logo de los michis" class="logo" />
+      <h1>Guardianes de los Michis: Estacion de navegacion</h1>
+      <nav>
+        <ul class="nav-list">
+          <li>
+            <a href="../index.html"
+              ><button type="button" class="btn btn-outline-light btn-lg">
+                Inicio
+              </button></a
+            >
+          </li>
+          <li>
+            <a href="about.html"
+              ><button type="button" class="btn btn-outline-light btn-lg">
+                Sobre nosotros
+              </button></a
+            >
+          </li>
+          <li>
+            <a href="michi-lista.html"
+              ><button type="button" class="btn btn-outline-light btn-lg">
+                Nuestros Michis
+              </button></a
+            >
+          </li>
+          <li>
+            <a href="contact.html"
+              ><button type="button" class="btn btn-outline-light btn-lg">
+                Te estamos buscando
+              </button></a
+            >
+          </li>
+        </ul>
+      </nav>
     </header>
-        <main>
-        <div class="divider"></div>
-        <div class="video-container">
-            <video width="560" height="315" autoplay muted loop controls>
-                <source src="https://cdn.mtdv.me/video/rick.mp4" type="video/mp4">
-              </video>
-          </div>
-        <div class="divider"></div>
-        </main>
-        <footer>
-            <p class="footer">&copy; 2025 Guardianes de los Michis. Todos los derechos reservados.</p>
-            <p class="footer">Desarrollado por Vargh</p>
-            <audio controls loop>
-                <source src="../sounds/ss13-title.ogg" type="audio/ogg">
-            </audio> <!-- Despues le pongo la musiquita mas copada con js -->
-        </footer>
-</body>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
+    <main>
+      <div class="divider"></div>
+      <div class="video-container">
+        <video width="560" height="315" autoplay muted loop controls>
+          <source src="https://cdn.mtdv.me/video/rick.mp4" type="video/mp4" />
+        </video>
+      </div>
+      <div class="divider"></div>
+    </main>
+    <footer>
+      <p class="footer">
+        &copy; 2025 Guardianes de los Michis. Todos los derechos reservados<a
+          href="./pages/surprise.html"
+          class="sorpresa"
+          >.</a
+        >
+      </p>
+      <p class="footer">Desarrollado por Vargh</p>
+      <div class="audio-fixed">
+        <audio controls loop>
+          <source src="../sounds/ss13-title.ogg" type="audio/ogg" />
+        </audio>
+      </div>
+    </footer>
+  </body>
+  <link
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css"
+    rel="stylesheet"
+    integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT"
+    crossorigin="anonymous"
+  />
+  <script
+    src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
+    crossorigin="anonymous"
+  ></script>
 </html>
