--- a/pages/contact.html
+++ b/pages/contact.html
@@ -61,7 +61,7 @@
                 <li><a href="michi-lista.html"><button type="button" class="btn btn-outline-light btn-lg">Nuestros
                             Michis</button></a></li>
                 <li><a href="contact.html"><button type="button"
-                            class="btn btn-outline-light btn-lg">Contacto></button></a></li>
+                            class="btn btn-outline-light btn-lg">Contacto</button></a></li>
             </ul>
         </nav>
         <main>
