Redesign de tarjetas, objetos varios, css y el form

--- a/pages/michi-lista.html
+++ b/pages/michi-lista.html
@@ -57,7 +57,7 @@
                 <li><a href="../index.html"><button type="button"
                             class="btn btn-outline-light btn-lg">Inicio</button></a></li>
                 <li><a href="about.html"><button type="button" class="btn btn-outline-light btn-lg">Sobre
-                            nosotros</button></a></li>
+                            Nosotros</button></a></li>
                 <li><a href="michi-lista.html"><button type="button" class="btn btn-outline-light btn-lg">Nuestros
                             Michis</button></a></li>
                 <li><a href="contact.html"><button type="button"
@@ -68,48 +68,62 @@
             <div class="divider"></div>
             <h2>Nuestros Michis</h2>
             <div class="michi-tarjetas">
-                <div class="card" style="width: 23rem;">
+                <div class="card bg-dark text-white border-success" style="width: 23rem;">
                     <img src="../images/usi-michi.jpg" class="card-img-top" alt="Usi, michi intergalactico">
                     <div class="card-body">
                         <h5 class="card-title">Usi, el azote de xun'tar</h5>
                         <p class="card-text">Gran guerrero de la galaxia, Usi es un michi que ha viajado por todo el
                             universo. Conoce los secretos de los planetas y es un experto en derrotar a los enemigos de
                             la humanidad.</p>
+
                         <ul class="list-group list-group-flush">
-                            <li class="list-group-item"><span class="badge text-bg-primary">Edad</span> 5 meses
-                                terricolas</li>
-                            <li class="list-group-item"><span class="badge text-bg-primary">Sexo</span> Masculino</li>
-                            <li class="list-group-item"><span class="badge text-bg-primary">Comportamiento</span>
-                                Amigable</li>
+                            <li class="list-group-item bg-dark text-white border-success">
+                                <span class="badge rounded-pill text-bg-success">Edad</span> 5 meses terrícolas
+                            </li>
+                            <li class="list-group-item bg-dark text-white border-success">
+                                <span class="badge rounded-pill text-bg-success">Sexo</span> Masculino
+                            </li>
+                            <li class="list-group-item bg-dark text-white border-success">
+                                <span class="badge rounded-pill text-bg-success">Comportamiento</span> Amigable
+                            </li>
                         </ul>
-                        <a href="#" class="btn btn-primary">¡Adoptar!</a>
+                        <a href="#" class="btn btn-outline-success mt-3">¡Adoptar!</a>
                     </div>
                 </div>
-                <div class="card" style="width: 23rem;">
+                <div class="card bg-dark text-white border-success" style="width: 23rem;">
                     <img src="../images/usi-michi.jpg" class="card-img-top" alt="Usi, michi intergalactico">
                     <div class="card-body">
                         <h5 class="card-title">Usi, el azote de xun'tar</h5>
-                        <p class="card-text"><span class="badge text-bg-primary">Edad</span> 5 meses terricolas</p>
-                        <p class="card-text"><span class="badge text-bg-primary">Sexo</span> Macho</p>
-                        <p class="card-text"><span class="badge text-bg-primary">Comportamiento</span> Soldado
-                            solitario, ama los humanos</p>
-                        <p class="card-text"><span class="badge text-bg-primary">Poder</span> Puede devorar un plato de
-                            comida en 10 segundos</p>
-                        <a href="#" class="btn btn-primary">¡Adoptar!</a>
+                        <p class="card-text">Gran guerrero de la galaxia, Usi es un michi que ha viajado por todo el
+                            universo. Conoce los secretos de los planetas y es un experto en derrotar a los enemigos de
+                            la humanidad.</p>
+
+                        <ul class="list-group list-group-flush">
+                            <li class="list-group-item bg-dark text-white border-success">
+                                <span class="badge rounded-pill text-bg-success">Edad</span> 5 meses terrícolas
+                            </li>
+                            <li class="list-group-item bg-dark text-white border-success">
+                                <span class="badge rounded-pill text-bg-success">Sexo</span> Masculino
+                            </li>
+                            <li class="list-group-item bg-dark text-white border-success">
+                                <span class="badge rounded-pill text-bg-success">Comportamiento</span> Amigable
+                            </li>
+                        </ul>
+                        <a href="#" class="btn btn-outline-success mt-3">¡Adoptar!</a>
                     </div>
                 </div>
             </div>
             <div class="divider"></div>
         </main>
         <footer>
-            <p class="footer">&copy; 2025 Guardianes de los Michis. Todos los derechos reservados<a
-                    href="./pages/surprise.html" class="sorpresa">.</a></p>
+            <p class="footer">
+                &copy; 2025 Guardianes de los Michis. Todos los derechos reservados<a href="../pages/surprise.html"
+                    class="sorpresa">.</a>
+            </p>
             <p class="footer">Desarrollado por Vargh</p>
-            <div class="audio-fixed">
-                <audio controls loop>
-                    <source src="../sounds/ss13-title.ogg" type="audio/ogg">
-                </audio>
-            </div>
+            <audio controls loop>
+                <source src="./sounds/ss13-title.ogg" type="audio/ogg" />
+            </audio>
         </footer>
 </body>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
