--- a/pages/surprise.html
+++ b/pages/surprise.html
@@ -69,7 +69,7 @@
           <li>
             <a href="about.html"
               ><button type="button" class="btn btn-outline-light btn-lg">
-                Sobre nosotros
+                Sobre Nosotros
               </button></a
             >
           </li>
@@ -100,19 +100,13 @@
       <div class="divider"></div>
     </main>
     <footer>
-      <p class="footer">
-        &copy; 2025 Guardianes de los Michis. Todos los derechos reservados<a
-          href="./pages/surprise.html"
-          class="sorpresa"
-          >.</a
-        >
-      </p>
-      <p class="footer">Desarrollado por Vargh</p>
-      <div class="audio-fixed">
-        <audio controls loop>
-          <source src="../sounds/ss13-title.ogg" type="audio/ogg" />
-        </audio>
-      </div>
+        <p class="footer">
+            &copy; 2025 Guardianes de los Michis. Todos los derechos reservados.</a>
+        </p>
+        <p class="footer">Desarrollado por Vargh</p>
+            <audio controls loop>
+                <source src="./sounds/ss13-title.ogg" type="audio/ogg" />
+            </audio>
     </footer>
   </body>
   <link
