--- a/pages/about.html
+++ b/pages/about.html
@@ -61,7 +61,7 @@
                 </li>
                 <li>
                     <a href="about.html"><button type="button" class="btn btn-outline-light btn-lg">
-                            Sobre nosotros
+                            Sobre Nosotros
                         </button></a>
                 </li>
                 <li>
@@ -91,15 +91,13 @@
     </main>
     <footer>
         <p class="footer">
-            &copy; 2025 Guardianes de los Michis. Todos los derechos reservados<a href="./pages/surprise.html"
+            &copy; 2025 Guardianes de los Michis. Todos los derechos reservados<a href="../pages/surprise.html"
                 class="sorpresa">.</a>
         </p>
         <p class="footer">Desarrollado por Vargh</p>
-        <div class="audio-fixed">
             <audio controls loop>
-                <source src="../sounds/ss13-title.ogg" type="audio/ogg" />
+                <source src="./sounds/ss13-title.ogg" type="audio/ogg" />
             </audio>
-        </div>
     </footer>
 </body>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
