--- a/pages/contact.html
+++ b/pages/contact.html
@@ -57,7 +57,7 @@
                 <li><a href="../index.html"><button type="button"
                             class="btn btn-outline-light btn-lg">Inicio</button></a></li>
                 <li><a href="about.html"><button type="button" class="btn btn-outline-light btn-lg">Sobre
-                            nosotros</button></a></li>
+                            Nosotros</button></a></li>
                 <li><a href="michi-lista.html"><button type="button" class="btn btn-outline-light btn-lg">Nuestros
                             Michis</button></a></li>
                 <li><a href="contact.html"><button type="button"
@@ -66,35 +66,36 @@
         </nav>
         <main>
             <div class="divider"></div>
-            <h2>¡Te estamos buscando!</h2>
+            <h2>¡Nuestros agentes estan listos para responder!</h2>
             <img src="../images/we-want-you.jpg" alt="Imagen Contacto" class="img-fluid d-block mx-auto">
             <p class="description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Asperiores animi eos
                 molestiae magnam eius accusantium mollitia. Ipsa eligendi esse magnam itaque placeat voluptatem
                 doloribus accusantium qui unde! Delectus, dolorum quia?</p>
+                <hr>
             <form action="#" method="get">
-                <label for="nombre">Nombre:</label><br>
+                <label for="nombre" class="form">Nombre:</label><br>
                 <input type="text" id="nombre" name="nombre" required><br><br>
 
-                <label for="email">Email:</label><br>
+                <label for="email" class="form">Email:</label><br>
                 <input type="email" id="email" name="email" required><br><br>
 
-                <label for="descripcion">Descripción:</label><br>
+                <label for="descripcion" class="form">Descripción:</label><br>
                 <textarea id="descripcion" name="descripcion" rows="5" cols="40" required></textarea><br><br>
 
-                <input type="submit" value="Enviar">
+                <input type="submit" value="Enviar" class="mb-4">
             </form>
             <div class="divider"></div>
         </main>
         <footer>
-            <p class="footer">&copy; 2025 Guardianes de los Michis. Todos los derechos reservados<a
-                    href="./pages/surprise.html" class="sorpresa">.</a></p>
-            <p class="footer">Desarrollado por Vargh</p>
-            <div class="audio-fixed">
-                <audio controls loop>
-                    <source src="../sounds/ss13-title.ogg" type="audio/ogg">
-                </audio>
-            </div>
-        </footer>
+        <p class="footer">
+            &copy; 2025 Guardianes de los Michis. Todos los derechos reservados<a href="../pages/surprise.html"
+                class="sorpresa">.</a>
+        </p>
+        <p class="footer">Desarrollado por Vargh</p>
+            <audio controls loop>
+                <source src="./sounds/ss13-title.ogg" type="audio/ogg" />
+            </audio>
+    </footer>
 </body>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
