Me hinche las pelotas e hice los mediaquery con gpt, quedo de 10. creo

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -92,7 +92,7 @@
                 class="sorpresa">.</a>
         </p>
         <p class="footer">Desarrollado por Vargh</p>
-            <audio controls loop>
+            <audio class="ms-2" controls loop>
                 <source src="./sounds/ss13-title.ogg" type="audio/ogg" />
             </audio>
     </footer>
