--- a/pages/michi-lista.html
+++ b/pages/michi-lista.html
@@ -112,6 +112,28 @@
                         <a href="#" class="btn btn-outline-success mt-3">¡Adoptar!</a>
                     </div>
                 </div>
+            <div class="card bg-dark text-white border-success" style="width: 23rem;">
+                    <img src="../images/usi-michi.jpg" class="card-img-top" alt="Usi, michi intergalactico">
+                    <div class="card-body">
+                        <h5 class="card-title">Usi, el azote de xun'tar</h5>
+                        <p class="card-text">Gran guerrero de la galaxia, Usi es un michi que ha viajado por todo el
+                            universo. Conoce los secretos de los planetas y es un experto en derrotar a los enemigos de
+                            la humanidad.</p>
+
+                        <ul class="list-group list-group-flush">
+                            <li class="list-group-item bg-dark text-white border-success">
+                                <span class="badge rounded-pill text-bg-success">Edad</span> 5 meses terrícolas
+                            </li>
+                            <li class="list-group-item bg-dark text-white border-success">
+                                <span class="badge rounded-pill text-bg-success">Sexo</span> Masculino
+                            </li>
+                            <li class="list-group-item bg-dark text-white border-success">
+                                <span class="badge rounded-pill text-bg-success">Comportamiento</span> Amigable
+                            </li>
+                        </ul>
+                        <a href="#" class="btn btn-outline-success mt-3">¡Adoptar!</a>
+                    </div>
+                </div>
             </div>
             <div class="divider"></div>
         </main>
@@ -121,7 +143,7 @@
                     class="sorpresa">.</a>
             </p>
             <p class="footer">Desarrollado por Vargh</p>
-            <audio controls loop>
+            <audio class="ms-2" controls loop>
                 <source src="./sounds/ss13-title.ogg" type="audio/ogg" />
             </audio>
         </footer>
@@ -131,5 +153,4 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous">
 </script>
-
 </html>
