--- a/pages/surprise.html
+++ b/pages/surprise.html
@@ -104,7 +104,7 @@
             &copy; 2025 Guardianes de los Michis. Todos los derechos reservados.</a>
         </p>
         <p class="footer">Desarrollado por Vargh</p>
-            <audio controls loop>
+            <audio class="ms-2" controls loop>
                 <source src="./sounds/ss13-title.ogg" type="audio/ogg" />
             </audio>
     </footer>
