330 media query, audio fix

--- a/pages/about.html
+++ b/pages/about.html
@@ -96,7 +96,7 @@
         </p>
         <p class="footer">Desarrollado por Vargh</p>
             <audio class="ms-2" controls loop>
-                <source src="./sounds/ss13-title.ogg" type="audio/ogg" />
+                <source src="../sounds/ss13-title.ogg" type="audio/ogg" />
             </audio>
     </footer>
 </body>
