Preparativos pre sass

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -68,9 +68,7 @@
             <div class="divider"></div>
             <h2>¡Nuestros agentes estan listos para responder!</h2>
             <img src="../images/we-want-you.jpg" alt="Imagen Contacto" class="img-fluid d-block mx-auto">
-            <p class="description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Asperiores animi eos
-                molestiae magnam eius accusantium mollitia. Ipsa eligendi esse magnam itaque placeat voluptatem
-                doloribus accusantium qui unde! Delectus, dolorum quia?</p>
+            <p class="description">¡Atención, tripulante! Has llegado al <strong>Centro de Comunicaciones Intergalácticas</strong> de Guardianes de los Michis, ubicado en la cubierta principal de la <em>Nave Madre Siete Ronroneos</em>. ¿Querés adoptar un copiloto felino, donar latitas para nuestra misión o simplemente enviar un mensaje de apoyo a nuestra tropa? Nuestros agentes (mitad humanos, mitad gatos con auriculares) están listos para recibir tu señal desde cualquier rincón de la galaxia. Completa el formulario hiperespacial abajo y prepárate para un ronroneo de respuesta más rápido que un salto a la velocidad de la luz. ¡Evita las interferencias de aspiradoras y envíanos tu mensaje ya! 🚀😺</p>
                 <hr>
             <form action="#" method="get">
                 <label for="nombre" class="form">Nombre:</label><br>
