--- a/pages/michi-lista.html
+++ b/pages/michi-lista.html
@@ -69,7 +69,7 @@
             <h2>Nuestros Michis</h2>
             <div class="michi-tarjetas">
                 <div class="card bg-dark text-white border-success" style="width: 23rem;">
-                    <img src="../images/usi-michi.jpg" class="card-img-top" alt="Usi, michi intergalactico">
+                    <img src="../images-michis/usi-michi.jpg" class="card-img-top" alt="Usi, michi intergalactico">
                     <div class="card-body">
                         <h5 class="card-title">Usi, el azote de xun'tar</h5>
                         <p class="card-text">Gran guerrero de la galaxia, Usi es un michi que ha viajado por todo el
@@ -91,19 +91,17 @@
                     </div>
                 </div>
                 <div class="card bg-dark text-white border-success" style="width: 23rem;">
-                    <img src="../images/usi-michi.jpg" class="card-img-top" alt="Usi, michi intergalactico">
+                    <img src="../images-michis/hachi-michi.jpg" class="card-img-top" alt="Usi, michi intergalactico">
                     <div class="card-body">
-                        <h5 class="card-title">Usi, el azote de xun'tar</h5>
-                        <p class="card-text">Gran guerrero de la galaxia, Usi es un michi que ha viajado por todo el
-                            universo. Conoce los secretos de los planetas y es un experto en derrotar a los enemigos de
-                            la humanidad.</p>
+                        <h5 class="card-title">Hachi, la visionaria</h5>
+                        <p class="card-text">Gran visionaria de las constelaciones del quinto plano astral. Es capaz de concentrarse tanto en algo que su mirada se desvia a los mil destinos que le esperan. Despierta... ¿Pero a que costo?</p>
 
                         <ul class="list-group list-group-flush">
                             <li class="list-group-item bg-dark text-white border-success">
-                                <span class="badge rounded-pill text-bg-success">Edad</span> 5 meses terrícolas
+                                <span class="badge rounded-pill text-bg-success">Edad</span> 2 años terrícolas
                             </li>
                             <li class="list-group-item bg-dark text-white border-success">
-                                <span class="badge rounded-pill text-bg-success">Sexo</span> Masculino
+                                <span class="badge rounded-pill text-bg-success">Sexo</span> Femenino
                             </li>
                             <li class="list-group-item bg-dark text-white border-success">
                                 <span class="badge rounded-pill text-bg-success">Comportamiento</span> Amigable
@@ -113,22 +111,20 @@
                     </div>
                 </div>
             <div class="card bg-dark text-white border-success" style="width: 23rem;">
-                    <img src="../images/usi-michi.jpg" class="card-img-top" alt="Usi, michi intergalactico">
+                    <img src="../images-michis/pulga-michi.jpg" class="card-img-top" alt="Usi, michi intergalactico">
                     <div class="card-body">
-                        <h5 class="card-title">Usi, el azote de xun'tar</h5>
-                        <p class="card-text">Gran guerrero de la galaxia, Usi es un michi que ha viajado por todo el
-                            universo. Conoce los secretos de los planetas y es un experto en derrotar a los enemigos de
-                            la humanidad.</p>
+                        <h5 class="card-title">Pulga, el terror de las planicies</h5>
+                        <p class="card-text">Pulga le llevo al equipo de rescate varios dias de preparacion. Este fugaz cazador ama esconderse entre la vegetacion de sus campos de caza y utiliza su gran intelecto para enfrentar a sus enemigos.</p>
 
                         <ul class="list-group list-group-flush">
                             <li class="list-group-item bg-dark text-white border-success">
-                                <span class="badge rounded-pill text-bg-success">Edad</span> 5 meses terrícolas
+                                <span class="badge rounded-pill text-bg-success">Edad</span> 3 años terrícolas
                             </li>
                             <li class="list-group-item bg-dark text-white border-success">
                                 <span class="badge rounded-pill text-bg-success">Sexo</span> Masculino
                             </li>
                             <li class="list-group-item bg-dark text-white border-success">
-                                <span class="badge rounded-pill text-bg-success">Comportamiento</span> Amigable
+                                <span class="badge rounded-pill text-bg-success">Comportamiento</span> Distante con otros michis
                             </li>
                         </ul>
                         <a href="#" class="btn btn-outline-success mt-3">¡Adoptar!</a>
