--- a/index.html
+++ b/index.html
@@ -82,9 +82,47 @@
         <h2>Bienvenido terricola</h2>
         <img src="./images/michis-index.jpg" alt="imagen bienvenida" class="img-fluid d-block mx-auto" />
         <p class="description">
-            Usted se encuentra actualmente en el centro de operaciones de la
-            estacion espacial numero 57, bajo el comando de proteccion animal numero
-            uno de la galaxia, mas conocido como "Guardianes de los michis".
+            ¡Alerta, tripulante! Estás en el <strong>Centro de Operaciones de la Estación Espacial Número 57</strong>,
+            cuartel general de la fuerza de élite más peluda de la galaxia: <strong>Guardianes de los Michis</strong>.
+            Somos el comando número uno en protección animal, rescatando gatitos de nebulosas traicioneras, planetas con
+            gravedad anti-ronroneos y las garras de aspiradoras interdimensionales. Nuestra misión: garantizar que cada
+            michi encuentre un hogar estelar donde sea adorado como el capitán que es.
+        </p>
+        <h2>¿Listo para adoptar un copiloto galáctico?</h2>
+        <p class="description">
+            Adoptar un michi con nosotros no es solo llevarte un gato, ¡es reclutar a un héroe espacial! Pero ojo,
+            futuro comandante, hay protocolos que seguir:
+        </p>
+        <ul class="adoption-list">
+            <li>
+                <h3 class="neon-list-title">Vacunación y castración</h3>
+                <p>Todos nuestros michis vienen con su kit de inmunidad galáctica (vacunas al día) y están castrados
+                    para evitar mini-invasiones felinas no autorizadas.</p>
+            </li>
+            <hr>
+            <li>
+                <h3 class="neon-list-title">Cuidados estelares</h3>
+                <p>Cada adoptante recibe un <em>Manual de Supervivencia Felina</em> con tips para mantener a tu michi
+                    sano, feliz y lejos de los láseres domésticos (léase: punteros).</p>
+            </li>
+            <hr>
+            <li>
+                <h3 class="neon-list-title">Seguimiento interplanetario</h3>
+                <p>No te dejaremos solo en esta misión. Nuestro equipo de rastreo (tranqui, son solo humanos disfrazados
+                    de gatos) hará visitas y llamadas para asegurarse de que tu michi está conquistando tu sofá como se
+                    merece.</p>
+            </li>
+            <hr>
+            <li>
+                <h3 class="neon-list-title">Condiciones de adopción</h3>
+                <p>Para unirte a la tripulación, necesitarás un hogar seguro (sin agujeros negros ni perros con complejo
+                    de Darth Vader), compromiso de amor eterno y una ración mensual de latitas premium.</p>
+            </li>
+            <hr>
+        </ul>
+        <p class="description">
+            ¿Preparado para que un michi te elija como su copiloto? Únete a la misión y descubre cómo un ronroneo puede
+            cambiar tu órbita. ¡Despegue inminente! 🚀😺
         </p>
         <div class="divider"></div>
     </main>
@@ -94,9 +132,9 @@
                 class="sorpresa">.</a>
         </p>
         <p class="footer">Desarrollado por Vargh</p>
-            <audio class="ms-2" controls loop>
-                <source src="./sounds/ss13-title.ogg" type="audio/ogg" />
-            </audio>
+        <audio class="ms-2" controls loop>
+            <source src="./sounds/ss13-title.ogg" type="audio/ogg" />
+        </audio>
     </footer>
 </body>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
