--- a/pages/about.html
+++ b/pages/about.html
@@ -82,12 +82,30 @@
         <h2>Nuestra misión</h2>
         <img src="../images/about-us.jpg" alt="Imagen sobre nosotros" class="img-fluid d-block mx-auto" />
         <p class="description">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam
-            adipisci, veritatis dolore blanditiis nostrum saepe omnis, suscipit
-            cumque cum atque dignissimos voluptatibus facilis est expedita nesciunt
-            magni, quos eligendi deserunt?
-        </p>
-        <div class="divider"></div>
+            ¡Saludos, terrícola curioso! Estás a punto de conocer el corazón peludo de la galaxia: <strong>Guardianes de
+                los Michis</strong>, el refugio estelar más legendario desde que los gatos descubrieron cómo hackear los
+            sistemas de navegación espacial. Somos una tropa de rescatistas felinos que opera desde la <em>Nave Madre
+                Siete Ronroneos</em>, una fortaleza cósmica estacionada en la órbita de la <strong>Nebulosa Bigotes
+                Brillantes</strong>, a solo un salto hiperespacial del Cúmulo de Andrómeda. Nuestra misión: rescatar
+            michis de planetas olvidados, estaciones espaciales en quiebra y las temidas garras de los alienígenas
+            alérgicos al pelo.<p>
+                <img src="../images/sumir.png" alt="Gato Comandante" class="img-fluid d-block mx-auto" />
+                <p class="description">
+                    Fundada por el mítico Comandante <strong>Sumir</strong> (según la
+                    leyenda, desvió un asteroide con un solo maullido), nuestra organización combina tecnología de punta
+                    (como
+                    localizadores de ronroneos ultrasensibles) con un amor inquebrantable por los felinos. Cada michi
+                    que pasa
+                    por nuestra nave es entrenado en las artes de la siesta galáctica, el salto anti-gravedad y, por
+                    supuesto,
+                    el arte de derretir corazones humanos.
+                </p>
+                <p class="description">
+                    ¿Querés unirte a nuestra misión? Adoptá un michi, doná latitas o simplemente vení a maravillarte con
+                    nuestra flota de gatitos listos para conquistar tu sistema solar. ¡En Guardianes de los Michis, cada
+                    ronroneo es una supernova de amor! 🌌😺
+                </p>
+                <div class="divider"></div>
     </main>
     <footer>
         <p class="footer">
@@ -95,9 +113,9 @@
                 class="sorpresa">.</a>
         </p>
         <p class="footer">Desarrollado por Vargh</p>
-            <audio class="ms-2" controls loop>
-                <source src="../sounds/ss13-title.ogg" type="audio/ogg" />
-            </audio>
+        <audio class="ms-2" controls loop>
+            <source src="../sounds/ss13-title.ogg" type="audio/ogg" />
+        </audio>
     </footer>
 </body>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
