--- a/pages/michi-lista.html
+++ b/pages/michi-lista.html
@@ -50,7 +50,7 @@
         <div class="star star30"></div>
     </div>
     <header>
-        <img src="../images/logo.png" alt="logo de los michis" class="logo">
+        <a href="../index.html"><img src="../images/logo.png" alt="logo de los michis" class="logo"></a>
         <h1>Guardianes de los Michis: Estacion de navegacion</h1>
         <nav>
             <ul class="nav-list">
